Replace InlineCssTextArea by RichTextArea