@@ -5,11 +5,13 @@ plugins {
 
 tasks.bootRun {
   doFirst {
-    val javafxFiles = classpath.filter { it.name.contains("javafx-") }
+    val javafxFiles = classpath.filter { it.name.contains("javafx-") || it.name.contains("jfx-") }
     if (!javafxFiles.isEmpty) {
       jvmArgs(
         "--module-path", javafxFiles.asPath,
-        "--add-modules", "javafx.controls"
+        "--add-modules", "javafx.controls,jfx.incubator.richtext,jfx.incubator.input",
+        "--add-exports", "javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
+        "--add-exports", "javafx.graphics/com.sun.javafx.util=jfx.incubator.richtext"
       )
     }
   }
